updated references in notebooks

--- a/deepFM_train.ipynb
+++ b/deepFM_train.ipynb
@@ -349,6 +349,8 @@
     }
    ],
    "source": [
+    "# source code from seminar\n",
+    "\n",
     "test_timepoint = data['timestamp'].quantile(q=0.80, interpolation='nearest')\n",
     "\n",
     "test_data_ = data.query('timestamp >= @test_timepoint')\n",
@@ -538,6 +540,17 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b94cfcde",
+   "metadata": {},
+   "source": [
+    "Reference: \n",
+    "\n",
+    "https://machinelearningmastery.com/display-deep-learning-model-training-history-in-keras/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 15,
    "id": "b0127bec",
@@ -550,6 +563,8 @@
    },
    "outputs": [],
    "source": [
+    "# Define plot and early stopping as the same as neuralCF\n",
+    "\n",
     "def plot(history):\n",
     "    cross_entropy_train = history.history['loss']\n",
     "    cross_entropy_val = history.history['val_loss']\n",
@@ -595,6 +610,23 @@
    },
    "source": [
     "#### DeepFM\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "b1310489",
+   "metadata": {},
+   "source": [
+    "Reference:\n",
+    "\n",
+    "https://towardsdatascience.com/a-performant-recommender-system-without-cold-start-problem-69bf2f0f0b9b\n",
+    "\n",
+    "https://colab.research.google.com/github/tensorflow/docs/blob/master/site/en/guide/migrate/migrating_feature_columns.ipynb?hl=da#scrollTo=JsoYUUgRS7hu\n",
+    "\n",
+    "https://towardsdatascience.com/how-to-build-a-wide-and-deep-model-using-keras-in-tensorflow-2-0-2f7a236b5a4b\n",
+    "\n",
+    "https://keras.io/api/models/model_training_apis/"
    ]
   },
   {
