--- a/neuralCF_train.ipynb
+++ b/neuralCF_train.ipynb
@@ -112,7 +112,7 @@
     }
    ],
    "source": [
-    "\n",
+    "# source code from seminar\n",
     "test_timepoint = data['timestamp'].quantile(q=0.80, interpolation='nearest')\n",
     "\n",
     "test_data_ = data.query('timestamp >= @test_timepoint')\n",
@@ -303,6 +303,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "99e930ca",
    "metadata": {
@@ -310,7 +311,11 @@
     "hidden": true
    },
    "source": [
-    "#### Utility functions"
+    "#### Utility functions\n",
+    "\n",
+    "Reference:\n",
+    "\n",
+    "https://machinelearningmastery.com/display-deep-learning-model-training-history-in-keras/"
    ]
   },
   {
@@ -326,12 +331,12 @@
    },
    "outputs": [],
    "source": [
-    "# Define function to plot training and validation loss (rmse)\n",
+    "# Define function to plot training and validation loss \n",
+    "\n",
     "def plot(history):\n",
     "    \n",
     "    cross_entropy_train = history.history['loss']\n",
     "    cross_entropy_val = history.history['val_loss']\n",
-    "\n",
     "\n",
     "    plt.title('Training and validation binary cross entropy loss')\n",
     "    plt.plot(cross_entropy_train, color='blue', label='Train')\n",
@@ -376,6 +381,21 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "id": "efb49661",
+   "metadata": {},
+   "source": [
+    "References: \n",
+    "\n",
+    "https://androidkt.com/concatenate-two-layers-using-keras-layers-concatenate-example/\n",
+    "\n",
+    "https://towardsdatascience.com/a-performant-recommender-system-without-cold-start-problem-69bf2f0f0b9b\n",
+    "\n",
+    "https://keras.io/api/models/model_training_apis/"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 36,
    "id": "e1dcbbb0",
@@ -390,10 +410,9 @@
    "source": [
     "# NeuralCF\n",
     "\n",
-    "# Concatenate userId embedding and movieId embedding at first then pass through MLP or several dense layers \n",
+    "# Concatenate userid embedding and movieid embedding \n",
     "mlp = tf.keras.layers.concatenate([tf.keras.layers.DenseFeatures([movie_emb_col])(inputs), tf.keras.layers.DenseFeatures([user_emb_col])(inputs)])\n",
     "\n",
-    "# Some hidden dense layers\n",
     "mlp = tf.keras.layers.Dense(64, activation='relu')(mlp)\n",
     "mlp = tf.keras.layers.Dense(32, activation='relu')(mlp)\n",
     "\n",
